--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "dev":"nodemon test.js",
+    "dev":"nodemon test.j",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
